--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 *.ps
 *.eps
 *.pdf
+!/written_final_report.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
