--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@
 *.eps
 *.pdf
 !/written_final_report.pdf
+!/poster.pdf
+!/oral_presentation.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
